feat: art: rentalx - update swagger documentation
