# NodeJS/aulas/rentalx/src/routes/specifications.routes.ts
@@ -1,15 +1,15 @@
 import {Router} from 'express';
-import {listSpecificationsController} from "../modules/cars/useCases/listSpecifications";
-import {createSpecificationController} from "../modules/cars/useCases/createSpecification";
+import {ListSpecificationsController} from "../modules/cars/useCases/listSpecifications/ListSpecificationsController";
+// @ts-ignore
+import {CreateSpecificationController} from '../modules/cars/useCases/createSpecification/CreateSpecificationController';
 
 const specificationsRoutes = Router();
 
-specificationsRoutes.post("/", (request, response) => {
-    return createSpecificationController.handle(request, response);
-});
+const createSpecificationController = new CreateSpecificationController();
+const listSpecificationsController = new ListSpecificationsController();
 
-specificationsRoutes.get("/", (request, response) => {
-    return listSpecificationsController.handle(request, response);
-});
+specificationsRoutes.post("/", createSpecificationController.handle);
+
+specificationsRoutes.get("/", listSpecificationsController.handle);
 
 export { specificationsRoutes };
